# ranger

./: .gitignore  .gitmodules  README.md  gitsteps.txt  readme  requirements.txt
docker/: Dockerfile  build.sh  config.env  exec.sh  rm.sh  run copy.sh  run.sh  start.sh
hcic/: CMakeLists.txt  package.xml
hcic/launch/: sim.launch  sim.rviz
hcic/launch/sensor_launch/: sick_multiscan.launch
map/map_hkust/: map.pbstream  record.bag_map.pgm  record.bag_map.yaml
map/map_test0/: map.pbstream  record.bag_map.pgm  record.bag_map.yaml
map/map_test1/: map.pbstream  record.bag_map.pgm  record.bag_map.yaml
map/map_test2/: map.pbstream  record.bag  record.bag_map.pgm  record.bag_map.yaml
map/map_test3/: map.pbstream  record.bag_map.pgm  record.bag_map.yaml
nav/: CMakeLists.txt  nodelet.xml  package.xml
nav/config/cartographer/: sick.lua  velodyne.lua
nav/config/move_base/: teb_local_planner.yaml
nav/config/move_base_real/: global_costmap_params.yaml
nav/config/move_base_sim/: costmap_common.yaml  global_costmap.yaml  global_planner.yaml  local_costmap.yaml  move_base_params.yaml  teb_local_planner_ranger.yaml  teb_local_planner_test.yaml
nav/config/ranger/: controller.yaml  pointcloud_filter.yaml  ur_controller.yaml
nav/include/: common.h
nav/launch/: explore.launch  mapping_rtabmap.launch  mapping_sick.launch  move_base.launch  planning2d.launch  planning3d.launch  ranger.launch
nav/launch/real/: localization_sick.launch  mapping_sick.launch
nav/launch/sim/: mapping_velodyne_cartographer.launch  sim_ranger.launch  spawn_ranger.launch
nav/rviz/: ranger.rviz  rviz.launch
nav/src/sim/: localization_sim_nodelet.cpp  sensor_input_nodelet.cpp
nav/urdf/: ranger.xacro  ranger_description.xacro  ranger_imu.xacro  ranger_lidar.xacro  ranger_platform.xacro  ranger_ur.xacro
nav/world/: simple_room.world
nav/world/world/: world.txt
scripts/: robot_start.sh  rviz.sh  start_localization.sh  start_mapping.sh  start_navigation.sh  stop_mapping.sh  stop_navigation.sh
src/: .rosinstall  .rosinstall.bak
(+25 files in other folders)
